# vcsq

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Makefile  README.md  shell.nix
.github/workflows/: ci.yml
lib/: Cargo.toml
lib/src/: cmd.rs  git.rs  lib.rs  plexer.rs  repo.rs
lib/src/adapter/: git.rs  hg.rs  jj.rs
vcsq-cli/: Cargo.toml
vcsq-cli/src/: lib.rs  main.rs
vcsq-cli/tests/cli/: cmd_brand.rs  cmd_check_health.rs  cmd_current_id.rs  cmd_dirty.rs  cmd_root.rs  cmd_tracked_files.rs  usage.rs
vcsq-cli/tests/libtest/: setup.rs
vcsq-lib/: .gitignore  Cargo.toml
vcsq-lib/src/: adapter.rs  cmd.rs  lib.rs  plexer.rs  repo.rs
vcsq-lib/src/adapter/: jj.rs
vcsq_cli/: Cargo.toml
vcsq_cli/src/: lib.rs  main.rs
vcsq_cli/tests/cli/: cmd_current_id.rs  cmd_dirty.rs  cmd_is_clean.rs  cmd_tracked_files.rs  usage.rs
vcsq_lib/src/: adapter.rs  cmd.rs  lib.rs  plexer.rs  repo.rs
vcsq_lib/src/adapter/: git.rs  hg.rs  jj.rs
vcst/: Cargo.toml
vcst/src/: lib.rs  main.rs
vcst/tests/: integration_test.rs
vcst/tests/cli/: cmd_check_health.rs  cmd_current_id.rs  cmd_dirty.rs  cmd_is_clean.rs  cmd_root.rs  cmd_tracked_files.rs  mod.rs
vcst/tests/cli_test/: cli.rs  cmd_brand.rs  cmd_dirty.rs  cmd_is_clean.rs  cmd_root.rs  mod.rs
vcst/tests/common/: consts.rs  mod.rs  setup.rs
vcst/tests/libtest/: consts.rs  mod.rs  setup.rs
