[workspace]

resolver = "2"
members = [
  "vcsq-lib",
  "vcsq-cli",
]

[workspace.package]
version = "0.4.0"
edition = "2021"
authors = ["Jonathan Zacsh j@zac.sh"]
description = "vcsq (vcsQuery): Version Control System (VCS) Querying CLI"
license = "Apache-2.0"
repository = "https://gitlab.com/jzacsh/vcsq"
readme = "README.md"
documentation = "https://gitlab.com/jzacsh/vcsq"
keywords = ["vcs", "scm"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
thiserror = "2.0.9"
