[package]
name = "vcst"
version = "0.7.0"
edition = "2021"

[dependencies]
thiserror.workspace = true
clap = { version = "4.5.23", features = ["derive"] }
libvcst = { path = "../vcsq-lib" }

[dev-dependencies]
assert_cmd = "2.0.16"
chrono = "0.4.39"
log = "0.4.22"
predicates = "3.1.3"
uuid = { version = "1.11.0", features = ["v4"] }
