[package]
name = "vcsq-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
documentation.workspace = true
keywords.workspace = true

[dependencies]
thiserror.workspace = true
clap = { version = "4.5.23", features = ["derive"] }
vcsq_lib = { path = "../vcsq-lib" }

[dev-dependencies]
assert_cmd = "2.0.16"
chrono = "0.4.39"
log = "0.4.22"
predicates = "3.1.3"
uuid = { version = "1.11.0", features = ["v4"] }

[[bin]]
name = "vcsq"
path = "src/main.rs"
