[package]
name = "vcsq_lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
documentation.workspace = true
keywords.workspace = true

[dependencies]
thiserror.workspace = true
const_format = "0.2.34"
strum = { version = "0.26.3" , features = ["derive"] }
