[package]
name = "vcst"
version = "0.0.2"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
libvcst = { path = "../lib" }
thiserror = "2.0.9"

[dev-dependencies]
assert_cmd = "2.0.16"
chrono = "0.4.39"
predicates = "3.1.3"
uuid = { version = "1.11.0", features = ["v4"] }
